--- a/.github/workflows/Main-CI.yaml
+++ b/.github/workflows/Main-CI.yaml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   scanning:
-    name: Scanning (SAST/SCA/Secrets/Container)
+    name: Scanning 
     runs-on: ubuntu-latest
     env:
       DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}
@@ -63,7 +63,7 @@ jobs:
           sarif_file: trivy-fs.sarif
 
       - name: OWASP Dependency-Check
-        uses: dependency-check/Dependency-Check_Action@v3.0.3
+        uses: dependency-check/Dependency-Check_Action@1.1.0
         with:
           project: ${{ github.repository }}
           path: .
