--- a/.github/workflows/Main-CI.yaml
+++ b/.github/workflows/Main-CI.yaml
@@ -21,6 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -28,34 +30,34 @@ jobs:
           fetch-depth: 0
 
     #   - name: SonarQube scan
+    #     if: ${{ env.SONAR_TOKEN != '' && env.SONAR_HOST_URL != '' }}
     #     uses: sonarsource/sonarqube-scan-action@v4
     #     env:
-    #       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    #       SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+    #       SONAR_TOKEN: ${{ env.SONAR_TOKEN }}
+    #       SONAR_HOST_URL: ${{ env.SONAR_HOST_URL }}
 
       - name: Prepare report folder
         run: mkdir -p reports
 
-      - name: Trivy repo (filesystem) scan
-        uses: aquasecurity/trivy-action@0.24.0
-        with:
-          scan-type: fs
-          scan-ref: .
-          format: sarif
-          output: trivy-fs.sarif
-          severity: CRITICAL,HIGH
-          ignore-unfixed: true
+      - name: Set up Trivy
+        uses: aquasecurity/setup-trivy@v0.2.5
 
-      - name: Trivy repo (filesystem) HTML report
-        uses: aquasecurity/trivy-action@0.24.0
-        with:
-          scan-type: fs
-          scan-ref: .
-          format: template
-          template: "@/contrib/html.tpl"
-          output: reports/trivy-fs.html
-          severity: CRITICAL,HIGH
-          ignore-unfixed: true
+      - name: Trivy repo scan (SARIF + HTML)
+        run: |
+          trivy fs \
+            --severity CRITICAL,HIGH \
+            --ignore-unfixed \
+            --format sarif \
+            --output trivy-fs.sarif \
+            ./tourly
+
+          trivy fs \
+            --severity CRITICAL,HIGH \
+            --ignore-unfixed \
+            --format template \
+            --template "@/contrib/html.tpl" \
+            --output reports/trivy-fs.html \
+            ./tourly
 
       - name: Upload Trivy repo SARIF
         uses: github/codeql-action/upload-sarif@v3
@@ -66,9 +68,8 @@ jobs:
         uses: dependency-check/Dependency-Check_Action@1.1.0
         with:
           project: ${{ github.repository }}
-          path: .
+          path: ./tourly
           format: "HTML"
-          out: reports
 
       - name: Gitleaks (secrets scan)
         uses: gitleaks/gitleaks-action@v2
@@ -85,32 +86,31 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Docker build (local)
+      - name: Docker build
         id: docker_build
         uses: docker/build-push-action@v6
         with:
-          context: .
+          context: ./tourly
+          file: ./tourly/Dockerfile
           load: true
           tags: ${{ env.DOCKER_IMAGE }}:${{ github.sha }}
 
-      - name: Trivy image scan
-        uses: aquasecurity/trivy-action@0.24.0
-        with:
-          image-ref: ${{ env.DOCKER_IMAGE }}:${{ github.sha }}
-          format: sarif
-          output: trivy-image.sarif
-          severity: CRITICAL,HIGH
-          ignore-unfixed: true
+      - name: Trivy image scan (SARIF + HTML)
+        run: |
+          trivy image \
+            --severity CRITICAL,HIGH \
+            --ignore-unfixed \
+            --format sarif \
+            --output trivy-image.sarif \
+            "${{ env.DOCKER_IMAGE }}:${{ github.sha }}"
 
-      - name: Trivy image HTML report
-        uses: aquasecurity/trivy-action@0.24.0
-        with:
-          image-ref: ${{ env.DOCKER_IMAGE }}:${{ github.sha }}
-          format: template
-          template: "@/contrib/html.tpl"
-          output: reports/trivy-image.html
-          severity: CRITICAL,HIGH
-          ignore-unfixed: true
+          trivy image \
+            --severity CRITICAL,HIGH \
+            --ignore-unfixed \
+            --format template \
+            --template "@/contrib/html.tpl" \
+            --output reports/trivy-image.html \
+            "${{ env.DOCKER_IMAGE }}:${{ github.sha }}"
 
       - name: Upload Trivy image SARIF
         uses: github/codeql-action/upload-sarif@v3
