--- a/.github/workflows/Main-CI.yaml
+++ b/.github/workflows/Main-CI.yaml
@@ -1,141 +1,127 @@
-name: Central CI Pipeline
-
-on:
-  push:
-    branches:
-      - "**"
-    tags:
-      - "**"
-  pull_request:
-    branches:
-      - "**"
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  security-events: write
-
-jobs:
-  scanning:
-    name: Scanning 
-    runs-on: ubuntu-latest
-    env:
-      DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-    #   - name: SonarQube scan
-    #     if: ${{ env.SONAR_TOKEN != '' && env.SONAR_HOST_URL != '' }}
-    #     uses: sonarsource/sonarqube-scan-action@v4
-    #     env:
-    #       SONAR_TOKEN: ${{ env.SONAR_TOKEN }}
-    #       SONAR_HOST_URL: ${{ env.SONAR_HOST_URL }}
-
-      - name: Prepare report folder
-        run: mkdir -p reports
-
-      - name: Set up Trivy
-        uses: aquasecurity/setup-trivy@v0.2.5
-
-      - name: Trivy repo scan (SARIF + HTML)
-        run: |
-          trivy fs \
-            --severity CRITICAL,HIGH \
-            --ignore-unfixed \
-            --format sarif \
-            --output trivy-fs.sarif \
-            ./tourly
-
-          trivy fs \
-            --severity CRITICAL,HIGH \
-            --ignore-unfixed \
-            --format template \
-            --template "@/contrib/html.tpl" \
-            --output reports/trivy-fs.html \
-            ./tourly
-
-      - name: Upload Trivy repo SARIF
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: trivy-fs.sarif
-
-      - name: OWASP Dependency-Check
-        uses: dependency-check/Dependency-Check_Action@1.1.0
-        with:
-          project: ${{ github.repository }}
-          path: ./tourly
-          format: "HTML"
-
-      - name: Gitleaks (secrets scan)
-        uses: gitleaks/gitleaks-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        if: github.event_name == 'push'
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Docker build
-        id: docker_build
-        uses: docker/build-push-action@v6
-        with:
-          context: ./tourly
-          file: ./tourly/Dockerfile
-          load: true
-          tags: ${{ env.DOCKER_IMAGE }}:${{ github.sha }}
-
-      - name: Trivy image scan (SARIF + HTML)
-        run: |
-          trivy image \
-            --severity CRITICAL,HIGH \
-            --ignore-unfixed \
-            --format sarif \
-            --output trivy-image.sarif \
-            "${{ env.DOCKER_IMAGE }}:${{ github.sha }}"
-
-          trivy image \
-            --severity CRITICAL,HIGH \
-            --ignore-unfixed \
-            --format template \
-            --template "@/contrib/html.tpl" \
-            --output reports/trivy-image.html \
-            "${{ env.DOCKER_IMAGE }}:${{ github.sha }}"
-
-      - name: Upload Trivy image SARIF
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: trivy-image.sarif
-
-      - name: Upload HTML security reports (artifact)
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: security-reports-html
-          path: |
-            reports/trivy-fs.html
-            reports/trivy-image.html
-            reports/dependency-check-report.html
-
-      - name: Docker push
-        if: github.event_name == 'push'
-        run: |
-          docker push "${{ env.DOCKER_IMAGE }}:${{ github.sha }}"
-
-  ci:
-    name: CI (after scanning)
-    needs: scanning
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+---
+  name: Voting application CI vote
+  
+  on:
+    workflow_dispatch:
+    push:
+      branches:
+        - '**'
+    pull_request:
+  
+  env:
+    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+    APP: vote
+    INFRA_REPO: your-org/voting-infra        # 👈 infra repo name
+    INFRA_BRANCH: main
+  
+  jobs:
+    SecurityScan:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout app repo
+          uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
+  
+        - name: Setup Java
+          uses: actions/setup-java@v4
+          with:
+            distribution: temurin
+            java-version: '21'
+  
+        # ---------- SonarQube Scan ----------
+        - name: SonarQube Scan
+          uses: SonarSource/sonarqube-scan-action@v4
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+  
+        # - name: SonarQube Quality Gate
+        #   uses: sonarsource/sonarqube-quality-gate-action@master
+        #   timeout-minutes: 8
+        #   env:
+        #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+  
+        # ---------- Security Scans ----------
+        - name: OWASP Dependency Check
+          uses: dependency-check/Dependency-Check_Action@main
+          continue-on-error: true
+          env:
+            JAVA_HOME: /opt/jdk
+          with:
+            project: Voting_app
+            path: .
+            format: HTML
+            out: reports
+            args: >
+              --failOnCVSS 7
+              --enableRetired
+  
+        - name: Upload OWASP Report
+          uses: actions/upload-artifact@v4
+          with:
+            name: OWASP-dependency-report
+            path: reports/dependency-check-report.html
+  
+        - name: Trivy FS Scan
+          uses: aquasecurity/trivy-action@0.28.0
+          continue-on-error: true
+          with:
+            scan-type: fs
+            ignore-unfixed: true
+            severity: CRITICAL
+  
+    build-and-push:
+      runs-on: ubuntu-latest
+      needs: SecurityScan
+      steps:
+        - name: Checkout app repo
+          uses: actions/checkout@v4
+  
+        - name: Docker Login
+          run: |
+            docker login -u "${{ vars.DOCKER_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASS }}"
+  
+        - name: Docker Build
+          run: |
+            docker build -t ${{ env.APP }} ./${{ env.APP }}
+  
+        - name: Trivy Image Scan
+          uses: aquasecurity/trivy-action@0.28.0
+          continue-on-error: true
+          with:
+            image-ref: ${{ env.APP }}
+            severity: CRITICAL,HIGH
+  
+        - name: Push Image
+          run: |
+            docker tag ${{ env.APP }} ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}:v${{ github.run_number }}
+            docker push ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}:v${{ github.run_number }}
+  
+    Deploy:
+      runs-on: ubuntu-latest
+      needs: build-and-push
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      steps:
+        # ---------- Checkout INFRA repo ----------
+        - name: Checkout infra repo
+          uses: actions/checkout@v4
+          with:
+            repository: ${{ env.INFRA_REPO }}
+            ref: ${{ env.INFRA_BRANCH }}
+            token: ${{ secrets.GIT_TOKEN }}
+  
+        # ---------- Update K8s manifest ----------
+        - name: Update image tag in infra repo
+          run: |
+            sed -i 's|image:.*|image: '"${{ vars.DOCKER_USERNAME }}"'/${{ env.APP }}:v'"${{ github.run_number }}"'|g' k8s-specifications/${{ env.APP }}-deployment.yaml
+  
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git config user.name "github-actions[bot]"
+            git add .
+            git commit -m "Update ${APP} image to v${{ github.run_number }}"
+            git push origin ${{ env.INFRA_BRANCH }}
+  
