--- a/.github/workflows/Main-CI.yaml
+++ b/.github/workflows/Main-CI.yaml
@@ -11,7 +11,7 @@
   env:
     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-    APP: vote
+    APP: tourly
     INFRA_REPO: your-org/voting-infra        # 👈 infra repo name
     INFRA_BRANCH: main
   
@@ -65,7 +65,13 @@
           with:
             name: OWASP-dependency-report
             path: reports/dependency-check-report.html
-  
+
+        - name: Gitleaks Scan
+          uses: gitleaks/gitleaks-action@v2
+          continue-on-error: true
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
         - name: Trivy FS Scan
           uses: aquasecurity/trivy-action@0.28.0
           continue-on-error: true
@@ -73,6 +79,15 @@
             scan-type: fs
             ignore-unfixed: true
             severity: CRITICAL
+            format: template
+            template: "@/contrib/html.tpl"
+            output: trivy-fs-report.html
+
+        - name: Upload Trivy FS Report
+          uses: actions/upload-artifact@v4
+          with:
+            name: trivy-fs-report
+            path: trivy-fs-report.html
   
     build-and-push:
       runs-on: ubuntu-latest
@@ -87,7 +102,7 @@
   
         - name: Docker Build
           run: |
-            docker build -t .
+            docker build -t ${{ env.APP }} .
   
         - name: Trivy Image Scan
           uses: aquasecurity/trivy-action@0.28.0
