--- a/.github/workflows/Main-CI.yaml
+++ b/.github/workflows/Main-CI.yaml
@@ -1,142 +1,117 @@
----
-  name: Voting application CI vote
-  
-  on:
-    workflow_dispatch:
-    push:
-      branches:
-        - '**'
-    pull_request:
-  
-  env:
-    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-    APP: tourly
-    INFRA_REPO: your-org/voting-infra        # 👈 infra repo name
-    INFRA_BRANCH: main
-  
-  jobs:
-    SecurityScan:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout app repo
-          uses: actions/checkout@v4
-          with:
-            fetch-depth: 0
-  
-        - name: Setup Java
-          uses: actions/setup-java@v4
-          with:
-            distribution: temurin
-            java-version: '21'
-  
-        # ---------- SonarQube Scan ----------
-        # - name: SonarQube Scan
-        #   uses: SonarSource/sonarqube-scan-action@v4
-        #   env:
-        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-  
-        # - name: SonarQube Quality Gate
-        #   uses: sonarsource/sonarqube-quality-gate-action@master
-        #   timeout-minutes: 8
-        #   env:
-        #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-  
-        # ---------- Security Scans ----------
-        - name: OWASP Dependency Check
-          uses: dependency-check/Dependency-Check_Action@main
-          continue-on-error: true
-          env:
-            JAVA_HOME: /opt/jdk
-          with:
-            project: Voting_app
-            path: .
-            format: HTML
-            out: reports
-            args: >
-              --failOnCVSS 7
-              --enableRetired
-  
-        - name: Upload OWASP Report
-          uses: actions/upload-artifact@v4
-          with:
-            name: OWASP-dependency-report
-            path: reports/dependency-check-report.html
+name: Voting application CI
 
-        - name: Gitleaks Scan
-          uses: gitleaks/gitleaks-action@v2
-          continue-on-error: true
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+on:
+  pull_request:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+    inputs:
+      build_image:
+        description: "Build & push Docker image?"
+        required: true
+        type: boolean
+        default: false
+      image_tag:
+        description: "Optional image tag (default = run number)"
+        required: false
 
-        - name: Trivy FS Scan
-          uses: aquasecurity/trivy-action@0.28.0
-          continue-on-error: true
-          with:
-            scan-type: fs
-            ignore-unfixed: true
-            severity: CRITICAL
-            format: template
-            template: "@/contrib/html.tpl"
-            output: trivy-fs-report.html
+env:
+  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+  APP: tourly
+  INFRA_REPO: your-org/voting-infra
+  INFRA_BRANCH: main
 
-        - name: Upload Trivy FS Report
-          uses: actions/upload-artifact@v4
-          with:
-            name: trivy-fs-report
-            path: trivy-fs-report.html
-  
-    build-and-push:
-      runs-on: ubuntu-latest
-      needs: SecurityScan
-      steps:
-        - name: Checkout app repo
-          uses: actions/checkout@v4
-  
-        - name: Docker Login
-          run: |
-            docker login -u "${{ vars.DOCKER_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASS }}"
-  
-        - name: Docker Build
-          run: |
-            docker build -t ${{ env.APP }} .
-  
-        - name: Trivy Image Scan
-          uses: aquasecurity/trivy-action@0.28.0
-          continue-on-error: true
-          with:
-            image-ref: ${{ env.APP }}
-            severity: CRITICAL,HIGH
-  
-        - name: Push Image
-          run: |
-            docker tag ${{ env.APP }} ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}:v${{ github.run_number }}
-            docker push ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}:v${{ github.run_number }}
-  
-    Deploy:
-      runs-on: ubuntu-latest
-      needs: build-and-push
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      steps:
-        # ---------- Checkout INFRA repo ----------
-        - name: Checkout infra repo
-          uses: actions/checkout@v4
-          with:
-            repository: ${{ env.INFRA_REPO }}
-            ref: ${{ env.INFRA_BRANCH }}
-            token: ${{ secrets.GIT_TOKEN }}
-  
-        # ---------- Update K8s manifest ----------
-        - name: Update image tag in infra repo
-          run: |
-            sed -i 's|image:.*|image: '"${{ vars.DOCKER_USERNAME }}"'/${{ env.APP }}:v'"${{ github.run_number }}"'|g' k8s-specifications/${{ env.APP }}-deployment.yaml
-  
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git config user.name "github-actions[bot]"
-            git add .
-            git commit -m "Update ${APP} image to v${{ github.run_number }}"
-            git push origin ${{ env.INFRA_BRANCH }}
-  
+jobs:
+  SecurityScan:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '21'
+
+      - name: OWASP Dependency Check
+        uses: dependency-check/Dependency-Check_Action@main
+        continue-on-error: true
+        with:
+          project: Voting_app
+          path: .
+          format: HTML
+          out: reports
+          args: >
+            --failOnCVSS 7
+
+      - uses: gitleaks/gitleaks-action@v2
+        continue-on-error: true
+
+      - name: Trivy FS Scan
+        uses: aquasecurity/trivy-action@0.28.0
+        continue-on-error: true
+        with:
+          scan-type: fs
+          severity: CRITICAL
+
+  build-and-push:
+    runs-on: ubuntu-latest
+    needs: SecurityScan
+    if: |
+      (github.event_name == 'workflow_dispatch' && inputs.build_image == true) ||
+      (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set image tag
+        run: |
+          if [ -n "${{ inputs.image_tag }}" ]; then
+            TAG=${{ inputs.image_tag }}
+          else
+            TAG=v${{ github.run_number }}
+          fi
+          echo "IMAGE_TAG=$TAG" >> $GITHUB_ENV
+
+      - name: Docker Login
+        run: |
+          docker login -u "${{ vars.DOCKER_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASS }}"
+
+      - name: Docker Build
+        run: |
+          docker build -t ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}:${IMAGE_TAG} .
+
+      - name: Trivy Image Scan
+        uses: aquasecurity/trivy-action@0.28.0
+        continue-on-error: true
+        with:
+          image-ref: ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}:${IMAGE_TAG}
+          severity: CRITICAL,HIGH
+
+      - name: Push Image
+        run: |
+          docker push ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}:${IMAGE_TAG}
+
+  Deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout infra repo
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ env.INFRA_REPO }}
+          ref: ${{ env.INFRA_BRANCH }}
+          token: ${{ secrets.GIT_TOKEN }}
+
+      - name: Update K8s manifest
+        run: |
+          sed -i "s|image:.*|image: ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}:${IMAGE_TAG}|g" \
+            k8s-specifications/${{ env.APP }}-deployment.yaml
+
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git commit -am "Update ${APP} image to ${IMAGE_TAG}"
+          git push
