--- a/.github/workflows/Pr-check.yaml
+++ b/.github/workflows/Pr-check.yaml
@@ -1,4 +1,4 @@
-name: PR Scanning
+name: PR Check
 
 on:
    pull_request:
@@ -8,7 +8,7 @@ env:
   SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
 jobs:
-  SecurityScan:
+  PR-Scan:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
