--- a/.github/workflows/Main-CI.yaml
+++ b/.github/workflows/Main-CI.yaml
@@ -1,14 +1,13 @@
-name: Voting application CI
+name: CI Pipeline
 
 on:
-  pull_request:
   push:
     branches:
       - main
   workflow_dispatch:
     inputs:
       build_image:
-        description: "Build & push Docker image?"
+        description: "Build & push Docker image"
         required: true
         type: boolean
         default: false
@@ -17,68 +16,13 @@ on:
         required: false
 
 env:
-  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
   APP: tourly
   INFRA_REPO: your-org/voting-infra
   INFRA_BRANCH: main
 
 jobs:
-  SecurityScan:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '21'
-
-      - name: OWASP Dependency Check
-        uses: dependency-check/Dependency-Check_Action@main
-        continue-on-error: true
-        env:
-           JAVA_HOME: /opt/jdk
-        with:
-            project: Voting_app
-            path: .
-            format: HTML
-            out: reports
-            args: >
-              --failOnCVSS 7
-              --enableRetired
-  
-      - name: Upload OWASP Report
-        uses: actions/upload-artifact@v4
-        with:
-            name: OWASP-dependency-report
-            path: reports/dependency-check-report.html
-
-      - uses: gitleaks/gitleaks-action@v2
-        continue-on-error: true
-
-      - name: Trivy FS Scan
-        uses: aquasecurity/trivy-action@0.28.0
-        continue-on-error: true
-        with:
-          scan-type: fs
-          ignore-unfixed: true
-          severity: CRITICAL
-          format: template
-          template: "@/contrib/html.tpl"
-          output: trivy-fs-report.html
-
-      - name: Upload Trivy FS Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: trivy-fs-report
-          path: trivy-fs-report.html
-
   build-and-push:
     runs-on: ubuntu-latest
-    needs: SecurityScan
     if: |
       (github.event_name == 'workflow_dispatch' && inputs.build_image == true) ||
       (github.event_name == 'push' && github.ref == 'refs/heads/main')
