--- a/.github/workflows/Pr-check.yaml
+++ b/.github/workflows/Pr-check.yaml
@@ -20,15 +20,15 @@ jobs:
           distribution: temurin
           java-version: '21'
 
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v4.2.1
+    #   - name: SonarQube Scan
+    #     uses: SonarSource/sonarqube-scan-action@v4.2.1
 
-      - name: SonarQube Server Quality Gate check
-        id: sonarqube-quality-gate-check
-        uses: sonarsource/sonarqube-quality-gate-action@master
-        with:
-           pollingTimeoutSec: 600
-        timeout-minutes: 8
+    #   - name: SonarQube Server Quality Gate check
+    #     id: sonarqube-quality-gate-check
+    #     uses: sonarsource/sonarqube-quality-gate-action@master
+    #     with:
+    #        pollingTimeoutSec: 600
+    #     timeout-minutes: 8
         
       - name: OWASP Dependency Check
         uses: dependency-check/Dependency-Check_Action@main
