--- a/.github/workflows/CI-Pipeline.yaml
+++ b/.github/workflows/CI-Pipeline.yaml
@@ -21,12 +21,25 @@ env:
   INFRA_BRANCH: main
 
 jobs:
-  
   Build-and-Push:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service:
+          - name: result
+            dockerfile: result/Dockerfile
+            context: result
+          - name: vote
+            dockerfile: vote/Dockerfile
+            context: backvoteend
+          - name: worker
+            dockerfile: worker/Dockerfile
+            context: worker
+
     if: |
       (github.event_name == 'workflow_dispatch' && inputs.build_image == true) ||
       (github.event_name == 'push' && github.ref == 'refs/heads/main')
+
     steps:
       - uses: actions/checkout@v4
 
@@ -45,37 +58,19 @@ jobs:
 
       - name: Docker Build
         run: |
-          docker build -t ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}:${IMAGE_TAG} .
+          docker build \
+            -f ${{ matrix.service.dockerfile }} \
+            -t ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}-${{ matrix.service.name }}:${IMAGE_TAG} \
+            ${{ matrix.service.context }}
 
       - name: Trivy Image Scan
         uses: aquasecurity/trivy-action@0.28.0
         continue-on-error: true
         with:
-          image-ref: ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}:${IMAGE_TAG}
+          image-ref: ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}-${{ matrix.service.name }}:${IMAGE_TAG}
           severity: CRITICAL,HIGH
 
       - name: Push Image
         run: |
-          docker push ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}:${IMAGE_TAG}
-
-  Deploy:
-    runs-on: ubuntu-latest
-    needs:  Build-and-Push
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    steps:
-      - name: Checkout infra repo
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ env.INFRA_REPO }}
-          ref: ${{ env.INFRA_BRANCH }}
-          token: ${{ secrets.GIT_TOKEN }}
-
-      - name: Update K8s manifest
-        run: |
-          sed -i "s|image:.*|image: ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}:${IMAGE_TAG}|g" \
-            k8s-specifications/${{ env.APP }}-deployment.yaml
-
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git commit -am "Update ${APP} image to ${IMAGE_TAG}"
-          git push
+          docker push \
+            ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}-${{ matrix.service.name }}:${IMAGE_TAG}
