--- a/.github/workflows/CI-Pipeline.yaml
+++ b/.github/workflows/CI-Pipeline.yaml
@@ -64,17 +64,17 @@ jobs:
         run: |
           docker build \
             -f ${{ matrix.service.dockerfile }} \
-            -t ${{ vars.DOCKER_USERNAME }}/${{ matrix.APP }}-${{ matrix.service.name }}:${IMAGE_TAG} \
+            -t ${{ vars.DOCKER_USERNAME }}/${{ matrix.APP }}${{ matrix.service.name }}:${IMAGE_TAG} \
             ${{ matrix.service.context }}
 
       - name: Trivy Image Scan
         uses: aquasecurity/trivy-action@0.28.0
         continue-on-error: true
         with:
-          image-ref: ${{ vars.DOCKER_USERNAME }}/${{ matrix.APP }}-${{ matrix.service.name }}:${IMAGE_TAG}
+          image-ref: ${{ vars.DOCKER_USERNAME }}/${{ matrix.APP }}${{ matrix.service.name }}:${IMAGE_TAG}
           severity: CRITICAL,HIGH
 
       - name: Push Image
         run: |
           docker push \
-            ${{ vars.DOCKER_USERNAME }}/${{ matrix.APP }}-${{ matrix.service.name }}:${IMAGE_TAG}
+            ${{ vars.DOCKER_USERNAME }}/${{ matrix.APP }}${{ matrix.service.name }}:${IMAGE_TAG}
