--- a/.github/workflows/CI-Pipeline.yaml
+++ b/.github/workflows/CI-Pipeline.yaml
@@ -167,6 +167,7 @@ jobs:
     name: Deploy ${{ matrix.service.name }} Tag to Infra
     runs-on: ubuntu-latest
     needs: push
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     strategy:
       matrix:
@@ -180,7 +181,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: AryanAtel1034/DevSecOps-GitOps-End-to-End-Infra   # replace with your infra repo
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.CD_TOKEN }}
           path: .
 
       - name: Set image tag
@@ -205,7 +206,6 @@ jobs:
 
       - name: Commit & Push changes
         run: |
-          cd infra
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add .
