--- a/.github/workflows/CI-Pipeline.yaml
+++ b/.github/workflows/CI-Pipeline.yaml
@@ -202,10 +202,10 @@ jobs:
 
       - name: Commit & Push changes safely
         run: |
-          git config user.name "github-actions"
+          git config user.name "github-actions-bot"
           git config user.email "github-actions@github.com"
           git add .
-          git commit -m "Update all image tags to $IMAGE_TAG [ci skip]" || echo "No changes to commit"
+          git commit -m "Update all image tags to $IMAGE_TAG " || echo "No changes to commit"
           git fetch origin main
           git rebase origin/main || git rebase --abort
           git push origin main
