--- a/.github/workflows/CI-Pipeline.yaml
+++ b/.github/workflows/CI-Pipeline.yaml
@@ -55,15 +55,12 @@ jobs:
           fi
           echo "IMAGE_TAG=$TAG" >> $GITHUB_ENV
 
-      - name: Docker Build
+      - name: Docker Image  Build
         run: |
-          docker buildx create --use
-          docker buildx build \
-            --platform linux/amd64,linux/arm64 \
+           docker build \
             -f ${{ matrix.service.dockerfile }} \
             -t ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}${{ matrix.service.name }}:${IMAGE_TAG} \
-            ${{ matrix.service.context }} \
-            --push
+            ${{ matrix.service.context }}
 
       - name: Save image as artifact
         run: |
