--- a/.github/workflows/CI-Pipeline.yaml
+++ b/.github/workflows/CI-Pipeline.yaml
@@ -54,12 +54,17 @@ jobs:
             TAG=v${{ github.run_number }}
           fi
           echo "IMAGE_TAG=$TAG" >> $GITHUB_ENV
+          
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Docker Image  Build
         run: |
-           docker build \
+           docker buildx build \
+            --platform linux/amd64,linux/arm64 \
             -f ${{ matrix.service.dockerfile }} \
             -t ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}${{ matrix.service.name }}:${IMAGE_TAG} \
+            --push \
             ${{ matrix.service.context }}
 
       - name: Save image as artifact
