--- a/.github/workflows/CI-Pipeline.yaml
+++ b/.github/workflows/CI-Pipeline.yaml
@@ -55,6 +55,12 @@ jobs:
           fi
           echo "IMAGE_TAG=$TAG" >> $GITHUB_ENV
           
+      - name: Docker Login
+        uses: docker/login-action@v3
+        with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_PASS }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
