--- a/.github/workflows/CI-Pipeline.yaml
+++ b/.github/workflows/CI-Pipeline.yaml
@@ -54,11 +54,11 @@ jobs:
             TAG=v${{ github.run_number }}
           fi
           echo "IMAGE_TAG=$TAG" >> $GITHUB_ENV
-          
+
       - name: Docker Login
         uses: docker/login-action@v3
         with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKERHUB_PASS }}
 
       - name: Set up Docker Buildx
