--- a/.github/workflows/CI-Pipeline.yaml
+++ b/.github/workflows/CI-Pipeline.yaml
@@ -61,16 +61,13 @@ jobs:
             username: ${{ vars.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKERHUB_PASS }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Docker Image  Build
         run: |
            docker buildx build \
             --platform linux/amd64,linux/arm64 \
             -f ${{ matrix.service.dockerfile }} \
             -t ${{ vars.DOCKER_USERNAME }}/${{ env.APP }}${{ matrix.service.name }}:${IMAGE_TAG} \
-            --push \
+            --load \
             ${{ matrix.service.context }}
 
       - name: Save image as artifact
